# CrossMobile-sample

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
native/: .gitignore  BuildConfig.h.in
native/src/: Adapter.cpp  Adapter.h  AppMain.cpp  AppMain.h  SampleApplication.cpp  SampleApplication.h
native/src/screen/: AppScreenCreator.cpp  AppScreenCreator.h  MainScreen.cpp  MainScreen.h
native/test/: TestRunner.cpp  TestRunner.h
proj/android/: build.gradle  buildNative.sh  settings.gradle
proj/android/app/: build.gradle
proj/android/app/src/main/: AndroidManifest.xml
proj/android/app/src/main/java/com/cross/mobile/sample/: Adapter.java  ListItemHolder.java  MainActivity.java  SampleApplication.java
proj/android/app/src/main/make/: Android.mk
proj/android/app/src/main/native/: main.cpp
proj/android/app/src/main/res/layout/: activity_main.xml  row.xml
proj/android/app/src/main/res/values/: strings.xml  styles.xml
proj/android/gradle/wrapper/: gradle-wrapper.properties
proj/ios/: .gitignore
proj/ios/app/: .gitignore  Info.plist  generate_cmake
proj/ios/app/Images.xcassets/tiger.imageset/: Contents.json
proj/ios/src/: Adapter.h  Adapter.mm  AppDelegate.h  AppDelegate.mm  MainScreenController.h  MainScreenController.mm  main.m
proj/linux/: main.cpp
